--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "env": "webpack server --env development",
-    "build": "webpack",
+    "build": "webpack-dev-server",
     "start": "webpack-dev-server"
   },
   "keywords": [],
