--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "env": "webpack server --env development",
-    "build": "concurrently \"webpack\" \"webpack-dev-server\"",
+    "build": "webpack",
     "start": "webpack-dev-server"
   },
   "keywords": [],
@@ -20,8 +20,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "sequelize": "^6.19.0",
-    "styled-components": "^5.3.5",
-    "concurrently": "^7.2.0"
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.11",
