--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "temp",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.jsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "env": "webpack server --env development",
