--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "env": "webpack server --env development",
-    "build": "react-scripts build",
+    "build": "NODE_PATH=src react-scripts build",
     "start": "webpack-dev-server"
   },
   "keywords": [],
